--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -149,8 +149,8 @@
         transform: translateY(-50%);
 
         background-color: #88DCDF;
-        border-radius: 50%;
-        padding: 8px 9px 6px;
+        border-radius: 44px;
+        padding: 9px 9px 6px;
 
         @include media-breakpoint-up(sm) {
             top: 22px;
@@ -786,7 +786,7 @@
                 display: flex;
                 flex-direction: column;
                 max-width: 100%;
-                height: calc(100vh - (var(--ak-header-height) * 2 + 75px));
+                height: calc(100vh - (var(--ak-header-height) * 2 + 90px));
                 overflow: auto;
                 overflow-x: hidden;
 
@@ -804,9 +804,9 @@
                     background-color: #ffffff;
                 }
 
-                &::-webkit-scrollbar-thumb {
-                    background-color: #000000;
-                }
+                // &::-webkit-scrollbar-thumb {
+                //     background-color: #000000;
+                // }
             }
 
             &__product-item {
@@ -1537,7 +1537,7 @@
     }
 
     @include media-breakpoint-down(sm) {
-        width: 89%;
+        width: 83%;
         margin: 0 auto;
 
         right: 0;
@@ -3046,7 +3046,7 @@
     .single-product-slider {
         position: relative;
         width: 100%;
-        height: 790px;
+        height: 100%;
         max-width: 100%;
 
         overflow: hidden;
@@ -6471,12 +6471,24 @@
         }
 
         .logged-in {
-        
             .mobile-menu-icon{
                 margin-bottom: 0!important;
         
             }
+        }
+
+        .newsletter-section .button{
+            @include media-breakpoint-down(sm) {
+                padding: 14px 34px!important;
+            }
+        }
+
         
+
+        .ak-mobile-menu-popup .menu-item.mobile-search-item .search-submit{
+            @include media-breakpoint-down(sm) {
+                padding-top: 1px!important;
+            }
         }
 
         .site-cookies-banner .close-btn {
@@ -6518,7 +6530,7 @@
         }
 
         .fullwidth-slider__item-description a {
-            padding: 7px 20px !important;
+            padding: 9px 20px 12px!important;
             margin-top: 10px;
             margin-left: 10px;
 
@@ -8813,13 +8825,13 @@
             right: 60px;
 
             @include media-breakpoint-up(xxl) {
-                right: 120px;
+                right: 120px; 
             }
         }
 
         @include media-breakpoint-down(sm) {
             top: 111px;
-            right: 37px;
+            right: var(--ak-main-spacing);
             padding-top: 5px;
         }
 
@@ -9168,28 +9180,28 @@
             }
 
             &:after {
-                content: '+';
-                font-size: 50px;
+                content: url(/wp-content/themes/anomeo/assets/img/Plus_FAQ_1920-01.svg);
                 font-family: 'Din Pro Light';
                 display: inline-block;
                 position: absolute;
+                -webkit-transition: all .3s;
+                -o-transition: all .3s;
                 transition: all .3s;
-                top: 10%;
+                top: 37%;
                 right: 70px;
                 z-index: -1;
-
-                color: #F89D3F;
+                width: 20px;
+                height: 20px;
 
                 @include media-breakpoint-down(sm) {
                     right: 35px;
-                    font-size: 35px;
-                    top: 30%;
+                    top: 40%;
                 }
 
                 @include media-breakpoint-up(xxl) {
                     right: 140px;
-                    top: 15%;
-                    font-size: 70px;
+                    width: 30px;
+                    height: 30px;
                 }
             }
         }
@@ -9200,6 +9212,7 @@
 
 .iconic-woothumbs-all-images-wrap {
     width: 100% !important;
+    height: 100%;
 }
 
 .iconic-woothumbs-wishlist-buttons {
@@ -9207,13 +9220,18 @@
 }
 
 .iconic-woothumbs-images-wrap {
+    height: 100%;
     .onsale {
         display: none;
     }
 }
 
+.slick-slider{
+    height: 100%;
+}
+
 .iconic-woothumbs-images__image {
-    height: 790px;
+    height: 813px;
 
     @include media-breakpoint-down(sm) {
         height: 566px;
@@ -9227,7 +9245,7 @@
 }
 
 .slick-vertical .slick-slide {
-    height: 790px;
+    height: 813px;
 
     @include media-breakpoint-down(sm) {
         height: 566px;
@@ -9239,25 +9257,31 @@
 }
 
 .slick-list.draggable {
-    height: 790px;
+    height: 100%!important;
 
     @include media-breakpoint-down(sm) {
-        height: 566px;
+        height: 566px!important;
     }
 
     @include media-breakpoint-up(xxl) {
-        height: 100vh;
+        height: 100vh!important;
     }
 }
 
 .iconic-woothumbs-responsive-media {
+    background: none!important;
     video {
-        height: 790px;
+        height: fit-content;
 
         @include media-breakpoint-down(sm) {
             height: 566px;
         }
     }
+}
+
+.pswp__item .iconic-woothumbs-responsive-media video{
+    height: 100%;
+    object-fit: contain;
 }
 
 .pt-0 {
@@ -9766,6 +9790,7 @@
 }
 
 .fa-spinner:before {
+    content: "\f1ce";
     color: #138997;
 }
 
@@ -10089,12 +10114,13 @@
     transform: rotate(90deg);
 
     top: 50%;
-    right: -35px;
+    right: 0;
     left: auto;
 
     @include media-breakpoint-down(sm) {
         transform: rotate(0);
-        right: 37px;
+        right: 0;
+        left: 0;
         top: auto;
         bottom: 37px;
         z-index: 1;
@@ -10119,7 +10145,7 @@
 .iconic-woothumbs-zoom-bullets .slick-dots li button {
     opacity: 1;
     background-color: #fff !important;
-    border: none !important;
+    border: 1px solid #0A616E !important;
     width: 12px;
     height: 12px;
     cursor: pointer;
@@ -10336,6 +10362,10 @@
         width: 30px;
         height: 30px;
     }
+
+    @include media-breakpoint-down(sm) {
+       margin: 0 7px;
+    }
 }
 
 .payment_method_paypal {
@@ -10528,6 +10558,10 @@
             padding-bottom: 0;
         }
     }
+}
+
+.iconic-woothumbs-images-wrap--hide-controls .slick-dots{
+    display: block;
 }
 
 
