--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -580,7 +580,7 @@
 
             width: 100%;
             max-width: 40%;
-            padding: 10px 35px;
+            padding: 10px 35px 9px;
 
             font-size: 16px;
             font-weight: 300;
@@ -779,6 +779,14 @@
                     font-family: 'Din Pro Light';
                     font-size: 16px;
                     text-transform: none;
+
+                    border-bottom:  1px solid #fff;
+
+                    transition: all .3s;
+
+                    &:hover{
+                        border-bottom: 1px solid #6C6D6E;
+                    }
                 }
             }
 
@@ -5737,6 +5745,8 @@
                     background-color: #fff;
                     border: 1px solid #b2b2b2;
                     border-radius: 50%;
+
+                   
                 }
 
                 &:after {
@@ -6199,7 +6209,7 @@
                     margin-top: 14px;
 
                     @include media-breakpoint-up(xxl) {
-                        padding-top: 22px;
+                        padding-top: 24px;
                     }
 
                     @include media-breakpoint-down(sm) {
@@ -6292,7 +6302,13 @@
                 @include media-breakpoint-down(sm) {
                     padding-left: 0;
                 }
+
+                @include media-breakpoint-up(xxl) {
+                    padding-left: 0;
+                }
             }
+
+
         }
     }
 }
@@ -8636,6 +8652,10 @@
             padding-bottom: 16px;
         }
 
+        @include media-breakpoint-up(xxl) {
+            padding-bottom: 15px;
+        }
+
         .price {
             margin-right: 47px;
             color: #148D9A;
@@ -8667,6 +8687,12 @@
     font-size: 20px;
 
     padding: var(--ak-main-spacing);
+    padding-left: 0;
+
+    @include media-breakpoint-up(xxl) {
+        padding-left: var(--ak-main-spacing);
+        font-size: 30px;
+    }
 }
 
 #yith-wcwl-popup-message {
@@ -10101,6 +10127,10 @@
 
 .woocommerce-shipping-fields {
     .shipping_address {
+
+        @include media-breakpoint-down(sm) {
+            padding-left: 0;;
+        }
         .form-row {
             @include media-breakpoint-down(sm) {
                 padding: 0 var(--ak-main-spacing);
@@ -10410,6 +10440,9 @@
 
     .category-btn {
         padding: 10px 20px 9px;
+        @include media-breakpoint-up(xxl) {
+            padding: 24px 52px 23px;
+        }
         @include media-breakpoint-down(sm) {
             padding: 19px 41px 17px;
             border-radius: 44px;
@@ -10506,6 +10539,10 @@
             @include media-breakpoint-down(sm) {
                 left: 85px;
             }
+
+            @include media-breakpoint-up(xxl) {
+                left: 190px;
+            }
         }
     }
 
@@ -10538,9 +10575,15 @@
     padding-left: var(--ak-main-spacing);
 }
 
-.select2-container--default .select2-selection--single .select2-selection__arrow b {
-    border-color: #138997 transparent transparent transparent!important;
-}
+.select2-container--default .select2-selection--single .select2-selection__arrow
+{
+    @include media-breakpoint-up(xxl) {
+        right: 30px;
+    }
+    b {
+        border-color: #138997 transparent transparent transparent!important;
+    }
+} 
 
 .product-type-simple{
     .ak-product__add-to-cart {
@@ -10568,7 +10611,7 @@
 .travel__container{
     .travel-link{
         display: flex;
-
+        align-items: center;
         font-size: 20px;
         color: #fff;
         font-family: 'Din Pro Light';
@@ -10622,14 +10665,126 @@
 
 .about-menu-item{
     .sub-menu__about{
-        height: 267px!important;
+        height: 235px!important;
+
+        @include media-breakpoint-up(xxl) {
+            height: 270px!important;
+        }
         li{
             &:last-child{
-                width: 17%;
+                width: 40%!important;
             }
            
         }
     }
 }
 
+.woocommerce-invoice-fields__fields-wrapper {
+    padding-left: var(--ak-main-spacing);
+
+    @include media-breakpoint-down(sm) {
+        padding-right: var(--ak-main-spacing);
+    }
+}
+
+.woocommerce-address-fields{
+    .woocommerce-input-wrapper .select2 {
+        @include media-breakpoint-up(xxl) {
+            width: 357px !important;
+            padding: 24px 34px;
+        }
+    }
+}
+
+.woocommerce-add-payment-method{
+    #add_payment_method{
+        padding-top: 70px;
+        width: 50%;
+
+        color: #138997;
+        font-size: 16px;
+
+        @include media-breakpoint-down(sm) {
+            width: 100%;
+        }
+
+        @include media-breakpoint-up(xxl) {
+            font-size: 30px;
+            padding-left: var(--ak-main-spacing);
+        }
+
+        .testmode-info{
+            display: none;
+        }
+
+        .woocommerce-PaymentMethod{
+            .input-radio{
+                opacity: 0;
+            }
+        }
+
+        .woocommerce-Button{
+            font-family: 'Din Pro Bold';
+            color: #fff;
+            font-size: 18px;
+            text-transform: uppercase;
+            padding: 10px 20px 6px;
+            border-radius: 22px;
+            background-color: #F89D3F;
+            transition: all .4s;
+            margin-top: 30px;
+
+            cursor: pointer;
+
+            &:hover {
+                background-color: #138997;
+            }
+    
+            @include media-breakpoint-up(xxl) {
+                padding: 24px 52px 23px;
+                border-radius: 45px;
+                font-size: 25px;
+            }
+    
+            @include media-breakpoint-down(sm) {
+                font-size: 18px;
+            }
+        }
+
+
+       
+    }
+
+    
+   
+    
+}
+
+.woocommerce-payment-methods{
+    .button{
+        font-family: 'Din Pro Bold';
+        color: #fff;
+        font-size: 18px;
+        text-transform: uppercase;
+        padding: 10px 20px 8px;
+        border-radius: 22px;
+        background-color: #F89D3F;
+        transition: all .4s;
+
+        &:hover {
+            background-color: #138997;
+        }
+
+        @include media-breakpoint-up(xxl) {
+            padding: 24px 52px 23px;
+            border-radius: 45px;
+            font-size: 25px;
+            margin-left: var(--ak-main-spacing);
+        }
+
+        @include media-breakpoint-down(sm) {
+            padding: 13px 20px 8px;
+        }
+    }
+}
 
