--- a/wp-content/themes/anomeo/assets/scss/main.scss
+++ b/wp-content/themes/anomeo/assets/scss/main.scss
@@ -933,6 +933,8 @@
                     .qty-buttons {
                         display: flex;
                         margin-bottom: 22px;
+                        
+                        align-items: baseline;
 
                         p {
                             color: #6C6D6E;
@@ -949,6 +951,12 @@
                             font-size: 16px;
                             font-weight: 100;
                             line-height: 1;
+                            transform: scale(1);
+                            transition: color .3s;
+
+                            &:hover{
+                                color: #F89D3F;
+                            }
                         }
 
                         .plus-btn {
@@ -2107,7 +2115,7 @@
         width: 100%;
 
         @include media-breakpoint-down(sm) {
-            height: inherit;
+            height: 100vh;
             object-fit: cover;
         }
 
@@ -3072,7 +3080,7 @@
     .single-product-slider {
         position: relative;
         width: 100%;
-        height: 100%;
+        height: 916px;
         max-width: 100%;
 
         overflow: hidden;
@@ -8227,6 +8235,13 @@
 
                 button {
                     color: #6C6D6E;
+                    cursor: pointer;
+
+                    transition: color .3s;
+
+                    &:hover{
+                        color: #F89D3F;
+                    }
                 }
             }
 
@@ -9320,7 +9335,9 @@
 }
 
 .iconic-woothumbs-images__image {
-    height: 813px;
+    height: 100%;
+
+    cursor: zoom-in;
 
     @include media-breakpoint-down(sm) {
         height: 566px;
@@ -9346,7 +9363,7 @@
 }
 
 .slick-list.draggable {
-    height: 100%!important;
+    height: 916px!important;
 
     @include media-breakpoint-down(sm) {
         height: 566px!important;
@@ -9369,8 +9386,12 @@
 }
 
 .pswp__item .iconic-woothumbs-responsive-media video{
-    height: 100%;
+    height: 85vh;
     object-fit: contain;
+    margin: 50px 0;
+    @include media-breakpoint-down(sm) {
+        margin: 0;
+    }
 }
 
 .pt-0 {
@@ -10210,17 +10231,28 @@
 
 .iconic-woothumbs-all-images-wrap .slick-dots,
 .iconic-woothumbs-zoom-bullets .slick-dots {
-    transform: rotate(90deg);
+    display: flex;
+    flex-direction:column;
 
     top: 50%;
-    right: 0;
+    right: 40px;
     left: auto;
 
+    height: fit-content;
+
+    li{
+        margin: 3px 0!important;
+        @include media-breakpoint-down(sm) {
+            margin: 0 7px!important;
+        }
+    }
+
     @include media-breakpoint-down(sm) {
-        transform: rotate(0);
+        flex-direction: row;
+        justify-content: center;
         right: 0;
         left: 0;
-        top: auto;
+        top: 500px;
         bottom: 37px;
         z-index: 1;
     }
@@ -10232,19 +10264,19 @@
 
 .slick-active .iconic-woothumbs-all-images-wrap .slick-dots button,
 .iconic-woothumbs-zoom-bullets .slick-dots button {
-    border-color: #0A616E !important;
+    border-color: #148695 !important;
 }
 
 .slick-active .iconic-woothumbs-all-images-wrap .slick-dots .slick-active button,
 .iconic-woothumbs-zoom-bullets .slick-dots .slick-active button {
-    background-color: #0A616E !important;
+    background-color: #148695 !important;
 }
 
 .iconic-woothumbs-all-images-wrap .slick-dots li button,
 .iconic-woothumbs-zoom-bullets .slick-dots li button {
     opacity: 1;
     background-color: #fff !important;
-    border: 1px solid #0A616E !important;
+    border: 1px solid #148695 !important;
     width: 12px;
     height: 12px;
     cursor: pointer;
@@ -10965,8 +10997,67 @@
     @include media-breakpoint-up(xxl) {
         padding: 21px 34px;
         width: 465px;
+        font-size: 20px;
+        border-radius: 45px;
     }
 }
+
+.iconic-woothumbs-icon-play{
+    opacity: 1!important;
+    &:before{
+        content: url('/wp-content/themes/anomeo/assets/img/Play_product-01.svg')!important;
+    }
+}
+
+.iconic-woothumbs-play{
+    z-index: 5!important;
+
+    left: auto!important;
+    right: 40px!important;
+
+    @include media-breakpoint-up(xxl) {
+        right: 49px!important;
+    }
+
+    @include media-breakpoint-down(sm) {
+        top: 493px!important;
+    }
+
+    i{
+        width: 18px!important;
+        height: 18px!important;
+
+        font-size: inherit!important;
+
+        @include media-breakpoint-up(xxl) {
+            width: 24px!important;
+            height: 24px!important;
+        }
+
+        @include media-breakpoint-down(sm) {
+            width: 19px!important;
+            height: 19px!important;
+        }
+    }
+}
+
+.iconic-woothumbs-responsive-media__controls{
+    top: 38%!important;
+    @include media-breakpoint-down(sm) {
+        top: 50%!important;
+    }
+}
+
+.slick-slide{
+    height: 916px!important;
+
+    @include media-breakpoint-down(sm) {
+        height: 100%!important;
+    }
+
+}
+
+
 
 
 
