shipping method, animation

--- a/wp-content/themes/anomeo/assets/scss/_base.scss
+++ b/wp-content/themes/anomeo/assets/scss/_base.scss
@@ -526,7 +526,7 @@ input{
             height: 500px;
             
         }
-        @include media-breakpoint-up(xl) {
+        @include media-breakpoint-up(xxl) {
             height: 650px;
             
         }
